--- a/animations/css/animation.css
+++ b/animations/css/animation.css
@@ -1,1 +1,20 @@
 /* Nilufar's Animation Stylesheet */
+body {
+  padding: 30px;
+}
+
+
+.male-female {
+  width: 720px;
+  height: 720px;
+  display: block;
+  margin: 2% auto;
+  background: url('images/male.png') left center;
+  animation: play 0.8s steps(8) infinite;
+}
+
+
+@-webkit-keyframes play {
+   from { background-position: 0px; }
+   to { background-position: -288px; }
+}
