--- a/css/app.css
+++ b/css/app.css
@@ -1,245 +1,137 @@
-/*-------stylesheet for HOME PAGE------------------------*/
+/* this is my stylesheet for my homepage */
 
-/* header styles */
-h1 {color:red;
-  background-color: black;
+
+
+* {outline: 1px solid black;
+padding: inherit;}
+}
+
+/* navigation styles/header */
+
+nav {font-family: 'Marcellus', serif;
   text-align: center;
-  background-size: cover;
-  font-weight: normal;
-  font-style: normal;
-  font-family: 'playbillregular';
+  color: black;
+  box-sizing: inherit;
 }
 
-/*navigation styles*/
-nav {
-background-color: maroon;
-margin: auto;
-border: 10px solid black;
-font-size: 20px;
-font-weight: normal;
-font-style: normal;
-text-align: center;
-background-size: cover;
-font-family: 'Frank Ruhl Libre', sans-serif;
+h1 {color: white; background-color: black;
+   font-family: 'Marcellus SC', serif;
+   text-align: relative;
 }
 
-/* navigation hover*/
-a:hover {background-color: maroon;
-color: black;}
+h2, h3 {
+  font-family: 'Marcellus', serif;
+  text-align: relative;
+  letter-spacing: 1px;
+  font-size: 12pt;
+  color: white;
+  background-color: black;
+  width:100%;
+}
+
+
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: black;
+  color:white;
+  box-sizing:inherit;
+}
+
+
+
 
 /* main body styles */
-body {font-family: 'Frank Ruhl Libre', sans-serif;margin:0;
-  background: black url(../images/wood.jpg) no-repeat fixed center;
-  font-weight: bold;
-}
-
-/*greeting styles*/
-h3 {font-family: 'playbillregular';
-font-size: 50px;
-letter-spacing: 3px;
-color: green;
-}
-
-/*footer styles*/
-footer {font-family: 'Frank Ruhl Libre', sans-serif;
-color: darkgreen;
-text-align: center;
-list-style-type: none;
-position:relative;
-bottom:0;
-width:100%;
-height:60px; 
-}
-
-
-/*links styles*/
-a {color: white;
- text-decoration: none;
-}
-
-/*button styles*/
-.button:hover {background-color: maroon;
-}
-.button {background-color: rgba(0,0,0,0.8);}
-
-
-
-/*---------------IMAGE SLIDER STYLES(Home page)---------------*/
-* {box-sizing:border-box}
-
-.mySlides {display:none}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: #bbb;
-  font-weight: bold;
+body {
+  font-family: 'Marcellus', serif;
   font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: maroon;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+p{
+  font-family: 'Marcellus SC', serif;
+  font-size: 18;
+  line-height: 1.5;
+  text-indent: 50px;
+  text-align: left;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor:pointer;
-  height: 13px;
-  width: 13px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-
-
-/*----------------IMAGE SLIDER END-------------------------------*/
-/*-------HOME PAGE END-----------------------------------------*/
-
-#aboutsource{
-  font-family: 'Frank Ruhl Libre', sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  border: 2px solid white;
-  color: black;
-  font-size: 22px;
+figcaption {
   text-align: center;
+  padding-top: 10px;
 
 }
-#aboutintro{
-  font-family: 'Frank Ruhl Libre', sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  border: 2px solid white;
-  color: black;
-  font-size: 22px;
-  text-align: center;
-}
-#navbg{
 
-  background-size: cover;
+/*images styles */
+.column{
+  box-sizing: inherit;
 }
-#bodybg{
 
-  background-size: cover;
-  marign:25px;
-  padding:300px;
 
+.thumbnail {
+  width: 250px;
+  height: 250px;
+  padding:inherit;
+  border:4px solid black;
 }
-#aboutfoot{
-  text-align: center;
+footer{
+  font-family: 'Marcellus SC', serif;
+  text-align: relative;
+  letter-spacing: 1px;
+  font-size: 12pt;
   color: white;
+  background-color: black;
+  width:100%;
+
 }
 
 
-
-/*--Menu Section-------------------------------------------------*/
-.prices {
-  text-align: center;
-}
-/*This is so I could align the 'prices may very' in the center of the Menu Page*/
-.menutables {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+/*Responsive design styles START-----------*/
+#container {
+  width: 960px;
+  margin: 0px auto;
 }
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+#left-column {
+  width: 700px;
+  float: left;
+  background-color: blue;
+}
+#right-column {
+  width: 700px;
+  float: left;
+  background-color: coral;
 }
 
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-
-/* Locations apge */ 
-/* Wood frame */
-.woodframe{
-  border: solid 30px;
-  border-image: url(../images/frame.jpg) 200 stretch;
-  display: block;
-  background-color: rgba(213, 188, 156, 0.8);
+@media screen and (max-width:959px) {
+  #container {
+    width:100%;
   }
-
-
-@media only screen and (max-width: 640px) {
-  .map{ 
-    width: 300px;
-    height: 300px;
-    position: absolute;
-    right: 35px;
+  #left-column {
+    width:50%;
   }
-  
- 
+  #right-column {
+    width:50%;
+  }
+  img{
+    width:100%;
+  }
+}
+@media screen and (max-width:640px) {
+  #left-column {
+    width:100%;
+  }
+  #right-column {
+    width:100%;
+  }
+}
+@media screen and (max-width:320px){
+   #container {
+    width:100%;
+  }
+}
+/*Responsive design styles END -----------*/
