--- a/animations/css/ani2.css
+++ b/animations/css/ani2.css
@@ -5,8 +5,9 @@
 body {
   padding: 30px;
   color:white;
-  background-image: url("../images/back.jpg");
-  background-color: #cccccc;
+
+  background-color: #212d42;
+  position:absolute;
 
 
 }
