--- a/animations/css/app.css
+++ b/animations/css/app.css
@@ -4,8 +4,8 @@
 body {
   padding: 30px;
   color:white;
-  background-image: url("../images/back.jpg");
-  background-color: #cccccc;
+  background-color: #212d42;
+  position:absolute;
 
 
 }
